[gd_scene load_steps=5 format=3 uid="uid://x844jeddjpxf"]

[ext_resource type="Script" path="res://Cooking/baking.gd" id="1_4586r"]
[ext_resource type="Texture2D" uid="uid://bsyvtp2sgudu4" path="res://Cooking/Sprites/FanningBaking.png" id="2_ivu6x"]
[ext_resource type="Theme" uid="uid://bv5ufn4d70a" path="res://Cooking/new_theme.tres" id="3_ydc8c"]
[ext_resource type="AudioStream" uid="uid://cborsekrra6tc" path="res://sounds/45643__snardin42__screen-door-opening-and-closing.mp3" id="4_cyvm2"]

[node name="Baking" type="Node2D"]
script = ExtResource("1_4586r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ivu6x")
centered = false

[node name="baking_timer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 999.0
offset_bottom = 698.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 743.0
offset_top = -2.0
offset_right = 1006.0
offset_bottom = 707.0
color = Color(0.141176, 0.141176, 0.141176, 0.6)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -6.0
offset_top = 518.0
offset_right = 744.0
offset_bottom = 708.0
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -3.0
offset_top = 520.0
offset_right = 1004.0
offset_bottom = 699.0
alignment = 1

[node name="Control" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Control2" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="instructions_label" type="Label" parent="Control/HBoxContainer/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -5.58
anchor_top = 0.216
anchor_right = -5.58
anchor_bottom = 0.216
offset_left = -94.0
offset_top = -21.664
offset_right = 121.0
offset_bottom = 122.336
text = "Get baking!
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control3" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="stop_button" type="Button" parent="Control/HBoxContainer/Control3"]
layout_mode = 1
anchors_preset = -1
offset_left = -121.0
offset_top = 7.0
offset_right = 114.0
offset_bottom = 166.0
text = "STOP!"

[node name="Control4" type="Control" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="baking_meter" type="ProgressBar" parent="Control/HBoxContainer/Control4"]
layout_mode = 2
offset_left = 209.0
offset_top = -499.0
offset_right = 431.0
offset_bottom = 167.0
theme = ExtResource("3_ydc8c")
fill_mode = 3
show_percentage = false

[node name="Polygon2D" type="Polygon2D" parent="Control/HBoxContainer/Control4/baking_meter"]
position = Vector2(4, 133)
color = Color(0, 0.882353, 0, 0.27451)
polygon = PackedVector2Array(1, 6, 1, 122, 213, 122, 213, 6)

[node name="Polygon2D2" type="Polygon2D" parent="Control/HBoxContainer/Control4/baking_meter"]
position = Vector2(4, 16)
color = Color(1, 0, 0.027451, 0.4)
polygon = PackedVector2Array(1, 6, 1, 122, 213, 122, 213, 6, 208, -7, 202, -11, 107, -11, 14, -11, 5, -6)

[node name="start_button" type="Button" parent="."]
visible = false
offset_left = 54.0
offset_top = 364.0
offset_right = 216.0
offset_bottom = 449.0
text = "Debug: Start Button"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cyvm2")

[connection signal="timeout" from="baking_timer" to="." method="_on_baking_timer_timeout"]
[connection signal="pressed" from="Control/HBoxContainer/Control3/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
